--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -88,7 +88,6 @@
 			<a title="gooby - cute siteee with fun stuff to see!" href="https://goooby.neocities.org/" target="_blank"><img src="!g/gooby.gif"></a>
 			<a title="ilovesushi - fun site and great pixels!!" href="https://ilovesushi.neocities.org" target="_blank"><img src="!g/ilovesushi.gif"></a>
 			<a title="yusha - this is a small site but i find it sooo charming!!! it was one of the first sites i stumbled upon when i made a neocities and as very inspiring to me" href="https://yusha.neocities.org/" target="_blank"><img src="!g/yusha.png"></a>
-			<a title="kojou - i love all the art around this site!" href="https://kojou.neocities.org" target="_blank"><img src="!g/kojou.jpg"></a>
 			<a title="imbran" href="https://imbran.neocities.org" target="_blank"><img src="!g/imbran.gif"></a>
 			<a title="meowbark - FUN!!! the photo blog is my fav page from this site!" href="https://meowbark2000.neocities.org" target="_blank"><img src="!g/meowbark2000.png"></a>
 			<a title="andou - site of a vtuber!" href="https://andou.gay" target="_blank"><img src="!g/andou.gay.gif"></a>
@@ -177,7 +176,7 @@
 			<a title="traumagotchi" href="https://traumagotchi.neocities.org" target="_blank"><img src="!g/traumagotchi.gif" alt="traumagotchi"></a>
 			<a title="fairygore - magical site! it makes me feel like i am lost in a forest" href="https://fairygore.neocities.org" target="_blank"><img src="!g/fairygore.png" alt="fairygore"></a>
 			<a title="ames" href="https://tthumbelina.neocities.org/" target="_blank"> <img src="!g/tthumbelina.GIF"></a>
-			<a href="hidingspot.neocities.org" target="_blank"><img src="https://hidingspot.neocities.org/imgs/hidingspot-sitebutton.gif" alt="hidingspot's site button"></a>
+			<a href="https://hidingspot.neocities.org" target="_blank"><img src="https://hidingspot.neocities.org/imgs/hidingspot-sitebutton.gif" alt="hidingspot's site button"></a>
 			<a title="ita.toys - such a FUN site. this is what having graphic design as your passion truly looks like" href="https://ita.toys" target="_blank"><img src="!g/ita.toys.gif" alt="ita.toys"></a>
 			<a title="fruitgummie" href="https://fruitgummie.neocities.org/" target="_blank"><img src="!g/fruitgummie.gif" alt="fruitgummie"></a>
 			<a title="shydeer" href="https://shydeer.neocities.org" target="_blank"><img src="!g/shydeer.png" alt="shydeer"></a>
@@ -263,6 +262,8 @@
 			<a title="nyabla" href="https://nyabla.net" target="_blank"><img src="!g/nyabla.png" alt="nyabla"></a>
 			<a href="https://decodreams.neocities.org" target="_blank"><img src="!g/decodreams.gif" alt="decodreams"></a>
 			<a href="https://ajiyuu.neocities.org" target="_blank"><img src="!g/ajiyuu.jpeg" alt="ajiyuu"></a>
+			<a href="https://hat.neocities.org" target="_blank"><img src="!g/hat.gif" alt="hat"></a>
+			<a href="https://zucchini.cc" target="_blank"><img src="!g/zucchini.gif" alt="zucchini.cc"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
@@ -370,6 +371,7 @@
 			<a title="rue - very interesting and well written music reviews!" href="https://angelpuppyclub.neocities.org" target="_blank"><img src="!g/angelpuppyclub.gif"></a>
 			<a title="mari - cute and silly" href="https://cardcaptors.neocities.org" target="_blank"><img src="!g/cardcaptors.gif" alt="cardcaptors!"></a>
 			<a title="surge - found on 32bit cafe discord server! very cool and i love the photography page" href="http://doubleincision.com/" target="_blank"><img src="!g/doubleincision.png"></a>
+			<a title="kojou - i love all the art around this site!" href="https://kojou.neocities.org" target="_blank"><img src="!g/kojou.jpg"></a>
 		</div>
 
 		<!--box1 end wrapper end div-->
