added frame links to journal and music pages

--- a/website/journal/credit.html
+++ b/website/journal/credit.html
@@ -21,6 +21,7 @@
 		<p>calendar iframe from <a href="http://calendar-muryou.com/blog.html" target="_blank">calendar-muryou</a></p>
 		<p>pencil cursor from <a href="https://www.cursors-4u.com/" target="_blank">cursors-4u</a></p>
 		<p>draggable js code from <a href="https://stackoverflow.com/questions/14695933/draggable-div-with-classname" target="_blank">stackoverflow</a></p>
+		<p>frame links from <a href="https://forum.melonland.net/index.php?topic=115" target="_blank">melonking</a>!</p>
 	</div>
 </body>
 
