--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -19,6 +19,7 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 	<link href="body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="v3-index.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
+	<script src="https://melonking.net/scripts/frame-link.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
@@ -60,7 +61,7 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 		</nav>
 
 		<main>
-			<iframe id="journal" src="2024/04.html" name="iframe_a" height="100%" width="100%"></iframe>
+			<iframe id="mainframe" src="2024/04.html" name="iframe_a" height="100%" width="100%"></iframe>
 		</main>
 	</div>
 
