--- a/website/music/index.html
+++ b/website/music/index.html
@@ -14,6 +14,7 @@
 	<link href="body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="index.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
+	<script src="https://melonking.net/scripts/frame-link.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
@@ -61,7 +62,7 @@
 		</nav>
 
 		<div id="main" class="box">
-			<iframe src="info.html" height="100%" width="100%" name="iframe_a"></iframe>
+			<iframe id="mainframe" src="info.html" height="100%" width="100%" name="iframe_a"></iframe>
 		</div>
 
 		<div id="side" class="box">
