--- a/website/index.html
+++ b/website/index.html
@@ -17,6 +17,8 @@
 	<link href="fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="!f/snowflakes.css" rel="stylesheet" type="text/css" media="all">
 	<!-- 	webring stuff -->
+	<script src="https://eggring.neocities.org/js/hatring.js"></script>
+	<script src="https://eggring.neocities.org/js/eggring-config.js"></script>
 	<link href="https://adilene.net/webring/webring.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://sugarforbrains.neocities.org/mobring/onionring.css">
 	<!-- tooltip shit -->
@@ -105,6 +107,17 @@
 	<div id="webrings">
 		<h3>webrings</h3>
 
+		<!--		eggring -->
+		<div style="border:2px solid #ffce10; width:80%;background:white;margin:auto;margin-bottom:10px;margin-top:10px;border-radius:10px;font-size: 13px;" id="eggring">
+			<p style="margin: 0px;">Eggring</p>
+			<img src="!g/web/fanlisting-cliques/egg.gif" alt="eggring">
+			<p style="margin:5px;">
+				<a id="eggringPrev" target="_blank" rel="noopener noreferrer">←</a> 🍳
+				<a id="eggringRand" target="_blank" rel="noopener noreferrer">random</a> 🍳
+				<a id="eggringNext" target="_blank" rel="noopener noreferrer">→</a>
+			</p>
+		</div>
+
 		<!--		silly.city-->
 		<iframe src="https://silly.city/embed.html?user=doqmeat" title="silly.city webring" frameborder="no" width="100%" height="60px">
 		</iframe>
@@ -147,18 +160,14 @@
 			<script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
 		</div>
 
-		<!-- melonland surf -->
-		<object id="melonland-surf-club" data="https://melonland.net/surf-badge.svg?fill=#c999f0" type="image/svg+xml" style="width: 100px; height: 100px;"></object>
-	</div>
-
-	<footer>
-		<p><b>credit:</b> background from PMMM rebellion
-			<img src="!g/pix/1leaf.png">
-			lace borders by <a href="https://sorahana.ciao.jp/">sorahana</a>
-			<img src="!g/pix/1leaf.png">
-			<a href="http://www.mf2fm.com/rv/dhtmlrainbow.php">blinking JS text effect</a>
-		</p>
-	</footer>
+		<footer>
+			<p><b>credit:</b> background from PMMM rebellion
+				<img src="!g/pix/1leaf.png">
+				lace borders by <a href="https://sorahana.ciao.jp/">sorahana</a>
+				<img src="!g/pix/1leaf.png">
+				<a href="http://www.mf2fm.com/rv/dhtmlrainbow.php">blinking JS text effect</a>
+			</p>
+		</footer>
 
 </body>
 
