minor changes to about

--- a/website/about/index.html
+++ b/website/about/index.html
@@ -43,7 +43,7 @@
 		<div class="header">webmaster_&amp;_site_info.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
-				<p><img title="this is me btw" src="/!g/deco/silly-cat.gif" align="left" style="margin-right:5px;" width="25%">hello everyone! i go by <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> and i am <mark>the webmaster of this site!</mark> i'm 23 year olds from a small island called puerto rico. i've lived here pretty much my entire life. i'm a little freak<sup>tm</sup> and my pronouns are he / she. i'm currently studying computer science （*＾-＾*）</p>
+				<p><img title="this is me btw" src="/!g/deco/silly-cat.gif" align="left" style="margin-right:5px;" width="25%">hello everyone! i go by <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> and i am <mark>the webmaster of this site!</mark> i'm 23 year olds from a small island called puerto rico. i've lived here pretty much my entire life. my first language is spanish despite my site being mostly in eng. i'm a little freak<sup>tm</sup> and my pronouns are he / she. i'm currently studying computer science. （*＾-＾*）</p>
 
 				<p><a title="art by bitmapdreams" href="http://lastsecret.net/bitmapdreams/" target="_blank"><img src="/!g/deco/springflowers.gif" width="20%" align="right"></a>i find it extremely difficult to write about who i am. i'm not sure why. i would say i know myself pretty well. but when comes to things like this, i am pretty horrible at it. hopefully you can get an idea of who i am by exploring my site, which i pour a lot of myself and love into <img src="/!g/pix/catroll.gif"> but at the end of the day i just like being silly and having fun.</p>
 
@@ -70,6 +70,7 @@
 		<div class="borderwrap">
 			<div class="wrapper-in">
 				<marquee direction="left" scrollamount="9" behavior="alternate" onmouseover="this.stop();" onmouseout="this.start();">
+					<img src="/collection/cats/!g/grindneverstarts.jpg">
 					<img src="!g/me-irl/birthday-seal.jpg">
 					<img src="!g/me-irl/epic-vamp.jpg">
 					<img src="/collection/cats/!g/hessokind.jpg">
@@ -149,9 +150,9 @@
 		<div class="borderwrap">
 			<div class="wrapper-in padding list">
 				<li>most spicy food...</li>
-				<li>driving at night (with traffic)</li>
+				<li>driving at night (with traffic and/or rain)</li>
+				<li>living in a US colony</li>
 				<li>the puertorican government</li>
-				<li>most old ppl here too</li>
 				<li>nfts, AI shit, whatever cryptobros are up to</li>
 				<li>coding JavaScript <small>i am slowly learning though....</small></li>
 			</div>
