--- a/website/index.html
+++ b/website/index.html
@@ -110,7 +110,7 @@
 		<!--		eggring -->
 		<div style="border:2px solid #ffce10; width:80%;background:white;margin:auto;margin-bottom:10px;margin-top:10px;border-radius:10px;font-size: 13px;" id="eggring">
 			<p style="margin: 0px;">Eggring</p>
-			<img src="!g/web/fanlisting-cliques/egg.gif" alt="eggring">
+			<a href="https://eggring.neocities.org" target="_parent"><img src="!g/web/fanlisting-cliques/egg.gif" alt="eggring"></a>
 			<p style="margin:5px;">
 				<a id="eggringPrev" target="_blank" rel="noopener noreferrer">←</a> 🍳
 				<a id="eggringRand" target="_blank" rel="noopener noreferrer">random</a> 🍳
@@ -160,14 +160,16 @@
 			<script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
 		</div>
 
-		<footer>
-			<p><b>credit:</b> background from PMMM rebellion
-				<img src="!g/pix/1leaf.png">
-				lace borders by <a href="https://sorahana.ciao.jp/">sorahana</a>
-				<img src="!g/pix/1leaf.png">
-				<a href="http://www.mf2fm.com/rv/dhtmlrainbow.php">blinking JS text effect</a>
-			</p>
-		</footer>
+	</div>
+
+	<footer>
+		<p><b>credit:</b> background from PMMM rebellion
+			<img src="!g/pix/1leaf.png">
+			lace borders by <a href="https://sorahana.ciao.jp/">sorahana</a>
+			<img src="!g/pix/1leaf.png">
+			<a href="http://www.mf2fm.com/rv/dhtmlrainbow.php">blinking JS text effect</a>
+		</p>
+	</footer>
 
 </body>
 
