--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -33,8 +33,8 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 
 		<nav>
 			<h1>des' journal</h1>
-			<img src="/!g/deco/diary.gif">
-			<p>a place where i talk about what's going on in my life and about my site!</p>
+			<img src="/!g/deco/diary.gif" align="left">
+			<p>on this little notepad i write about my life, site stuff, and any other misc things.</p>
 			<small class="sticky">all sticky notes are draggable!</small>
 			<p><a href="credit.html" target="iframe_a">credit page</a></p>
 			<img class="hide" src="/!g/deco/pencil1.gif" style="max-width:100%">
@@ -132,10 +132,10 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 			<p>i am a big foodie and so i found this site where you log in your food and you can share recipes and pics! hope it gets a little feed in the future i can put here!</p>
 
 			<h3><img src="/!g/pix/2ofem.gif" width="70" alt=""> <a title="will pop up in the iframe :)" href="https://doqmeat.blog.fc2.com" target="iframe_a">doqmeat.blog.fc2</a></h3>
-			<p>sometimes i have stuff to talk about that wouldn't fit on either status.cafe or my journal...</p>
+			<p>literally ramblings</p>
 
 			<h3><img src="/!g/pix/computer.gif"> <a href="https://status.cafe/users/doqmeat" target="_blank">status.cafe</a></h3>
-			<p>mostly for quick updates :3</p>
+			<p>mostly for quick updates so they can appear on my homepage :3</p>
 		</div>
 	</aside>
 
