--- a/website/not_found.html
+++ b/website/not_found.html
@@ -95,7 +95,7 @@
                       (_/
 </pre>
 	<p>
-		<a title="this will take you to the previous visited page" href="javascript:history.back()">go back</a>
+		<a title="this will take you to the previous visited page" href="javascript:history.back()">previous</a>
 		<span class="emoji">v</span>
 		<a href="/home" target="_parent">homepage</a>
 		<span class="emoji">d</span>
