internet graphics update

--- a/website/collection/internet-graphics/index.html
+++ b/website/collection/internet-graphics/index.html
@@ -32,7 +32,7 @@
 
 		<h1>internet graphics</h1>
 		<p><img src="/!g/deco/catlaying.gif"> i fucking love collecting these so much... all of these are just stuff i like.</p>
-		<p>click for credit, i'll try my best to link them back to their sources! some of these are <a href="/notebook/F2U/stamps.html" target="_blank">made by me</a> <img src="/!g/pix/2ofem.gif"></p>
+		<p>click for credit, i'll try my best to link them back to their sources! please feel free to contact me if you know the source of any of these. some of these are <a href="/notebook/F2U/stamps.html" target="_blank">made by me</a> <img src="/!g/pix/2ofem.gif"></p>
 
 		<h2 id="1" class="title">stamps</h2>
 		<div id="stamps" class="container">
@@ -233,6 +233,7 @@
 			<img src="!g/css.png">
 			<img src="!g/neo.jpg">
 			<img src="!g/cherry.gif">
+			<img src="!g/windose.png" alt="windose">
 			<img src="!g/hostedneo.gif">
 			<img src="!g/youcantoo!.gif">
 			<img src="!g/nft.gif">
@@ -268,6 +269,7 @@
 	</div>
 
 	<footer>
+		<p>last updated on: <b>10.apr.24</b></p>
 		<p>page built with materials by <a href="https://foollovers.com/" target="_blank">foollovers</a> and bg by <a href="http://sozaiya405.chu.jp/" target="_blank">sozaiya 405</a></p>
 		<a href="/collection">collection</a> / <a href="/home">home</a> / <a href="/sitemap">sitemap</a>
 	</footer>
