cat collection updated

--- a/website/collection/cats/index.html
+++ b/website/collection/cats/index.html
@@ -24,6 +24,7 @@
 
 		<!--column 1-->
 		<div class="column">
+			<img src="!g/grindneverstarts.jpg" alt="the grind never starts i'm sleeping">
 			<img src="!g/stupid-tiger.jpg" alt="stupid tiger">
 			<img src="!g/baby-cat.jpeg" alt="cat with a bib">
 			<img src="!g/ballin.jpeg" alt="cat balling">
@@ -59,7 +60,6 @@
 			<img src="!g/gulpcat.gif">
 			<a title="fishtopher and friends twt acc" href="https://twitter.com/mrfishtopher" target="_blank"><img src="!g/tobelovedistobechanged.jpg"></a>
 			<img src="!g/thelooker.jpeg">
-
 			<img src="!g/sleeptwo.jpeg">
 			<img src="!g/surprised.jpg">
 			<img src="!g/wellwouldu.jpg">
