--- a/website/home.html
+++ b/website/home.html
@@ -123,11 +123,11 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><span class="hl">playing:</span> <a href="/vgs/paranormasight">paranormasight</a>, <a href="/vgs/prsk">project sekai</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki
 				fujimoto</p>
-			<p><span class="hl">watching:</span> dungeon meshi, twin peaks, dead end: paranormal park</p>
+			<p><span class="hl">watching:</span> dungeon meshi, dead end: paranormal park, fallout, twin peaks S2</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> <a href="/projects/learning-js/index.html">learning JS</a>, uni work</p>
 			<p><span class="hl">coding/writing:</span> journal and planners blog post</p>
-			<p class="date">last updated on 07.apr.24</p>
+			<p class="date">last updated on 10.apr.24</p>
 		</div>
 
 		<div id="updates" class="box">
