--- a/website/home.html
+++ b/website/home.html
@@ -132,6 +132,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>11.apr.24 - my site is 1 year old today ^_^ i wrote about it on my <a href="/journal">journal</a></li>
 			<li>10.apr.24 - <a href="/music/listening-log/2024/spring.html#3">listening log</a>: 陽​の​か​け​ら</li>
 			<li>09.apr.24 - new <a href="/journal">journal </a>log: gender</li>
 			<li>07.apr.24 - updated featured section in <a href="/music">music</a></li>
