gaming log update

--- a/website/vgs/index.html
+++ b/website/vgs/index.html
@@ -103,13 +103,22 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv fav finished platformer single">
 			<a title="celeste" href="celeste/index.html" target="iframe_a"><img src="celeste.jpg" class="vgimg" tabindex="0"></a>
 		</div>
+		<div class="filterDiv fav finished single puzzle">
+			<a title="cloud gardens" href="cloud-gardens/index.html" target="iframe_a"><img src="cloud-gardens/cover.jpg" class="vgimg" tabindex="0"></a>
+		</div>
 		<div class="filterDiv currently notdone single adventure">
 			<a title="the dog island (ps2)" href="dog-island/index.html" target="iframe_a"><img src="dog-island.jpg" class="vgimg" tabindex="0"></a>
+		</div>
+		<div class="filterDiv notdone toplay single rpg action">
+			<a title="fallout" href="fallout-1/index.html" target="iframe_a"><img class="vgimg" src="fallout-1/cover.jpg" alt="fallout" tabindex="0"></a>
+		</div>
+		<div class="filterDiv notdone single action shooter rpg">
+			<a title="fallout new vegas" href="fallout-new-vegas/index.html" target="iframe_a"><img src="fallout-new-vegas/cover.jpg" class="vgimg" tabindex="0" alt="fallout new vegas"></a>
 		</div>
 		<div class="filterDiv finished rpg single">
 			<a title="dragon age inquisition" href="dai/index.html" target="iframe_a"><img src="dragonageinquisition.jpg" class="vgimg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv notdone currently fav sim single">
+		<div class="filterDiv finished currently fav sim single">
 			<a title="fashion dreamer" href="fashion-dreamer/index.html" target="iframe_a"><img src="fashion-dreamer.jpg" class="vgimg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv fav action finished single">
@@ -142,10 +151,10 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv fav finished cat single">
 			<a title="night in the woods" href="nitw/index.html" target="iframe_a"><img src="nitw.jpg" class="vgimg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv notdone vn single horror">
+		<div class="filterDiv currently notdone vn single horror">
 			<a title="paranormasight" href="paranormasight/index.html" target="iframe_a"><img src="paranormasight/cover.jpg" class="vgimg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv notdone adventure single">
+		<div class="filterDiv finished adventure single">
 			<a title="pikmin 4" href="pikmin-4/index.html" target="iframe_a"><img src="pikmin-4.jpg" class="vgimg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv fav finished single">
@@ -184,9 +193,6 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv notdone action single">
 			<a title="" href="2wip/index.html" target="iframe_a">yakuza 0</a>
 		</div>
-		<div class="filterDiv up toplay action single multi">
-			<a title="" href="2wip/index.html" target="iframe_a">hyper light breaker</a>
-		</div>
 		<div class="filterDiv fav finished single adventure plat action">
 			<a title="" href="2wip/index.html" target="iframe_a">hollow knight</a>
 		</div>
@@ -222,18 +228,6 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		</div>
 		<div class="filterDiv finished single horror psychological">
 			<a title="" href="2wip/index.html" target="iframe_a">milk inside a bag of milk inside a bag of milk</a>
-		</div>
-		<div class="filterDiv fav finished single puzzle">
-			<a title="" href="2wip/index.html" target="iframe_a">cloud gardens</a>
-		</div>
-		<div class="filterDiv notdone single action shooter rpg">
-			<a title="" href="2wip/index.html" target="iframe_a">fallout new vegas</a>
-		</div>
-		<div class="filterDiv notdone toplay single rpg action">
-			<a title="" href="2wip/index.html" target="iframe_a">fallout</a>
-		</div>
-		<div class="filterDiv toplay single rpg action">
-			<a title="" href="2wip/index.html" target="iframe_a">fallout 2</a>
 		</div>
 		<div class="filterDiv fav finished single platform roguelike">
 			<a title="" href="2wip/index.html" target="iframe_a">dead cells</a>
