--- a/website/vgs/info.html
+++ b/website/vgs/info.html
@@ -52,6 +52,7 @@
 		<h3>change log</h3>
 
 		<div id="log">
+			<li>12.apr.24 - added: <a href="fallout-1/index.html">fallout</a>, <a href="fallout-new-vegas/index.html">fallout new vegas</a> <small>i just finished watching the fallout show, can you tell?</small>, <a href="cloud-gardens/index.html">cloud gardens</a></li>
 			<li>21.mar.24 - added: <a href="paranormasight/index.html">paranormasight</a> / log: <a href="prsk/index.html">project sekai</a></li>
 			<li>11.dec.23 - log: <a href="fortnite/index.html#1">fortnite</a>, <a href="bloodborne/index.html#7">bloodborne</a></li>
 			<li>28.nov.23 - updated <a href="fashion-dreamer/index.html">fashion dreamer</a></li>
