--- a/website/home.html
+++ b/website/home.html
@@ -123,15 +123,16 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><span class="hl">playing:</span> <a href="/vgs/paranormasight">paranormasight</a>, <a href="/vgs/prsk">project sekai</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki
 				fujimoto</p>
-			<p><span class="hl">watching:</span> dungeon meshi, dead end: paranormal park, fallout, twin peaks S2</p>
+			<p><span class="hl">watching:</span> dungeon meshi, dead end: paranormal park</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> <a href="/projects/learning-js/index.html">learning JS</a>, uni work</p>
 			<p><span class="hl">coding/writing:</span> journal and planners blog post</p>
-			<p class="date">last updated on 10.apr.24</p>
+			<p class="date">last updated on 12.apr.24</p>
 		</div>
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>12.apr.24 - added some new pages to <a title="fallout, fallout new vegas, cloud gardens" href="/vgs">gaming log</a>!</li>
 			<li>11.apr.24 - my site is 1 year old today ^_^ i wrote about it on my <a href="/journal">journal</a></li>
 			<li>10.apr.24 - <a href="/music/listening-log/2024/spring.html#3">listening log</a>: 陽​の​か​け​ら</li>
 			<li>09.apr.24 - new <a href="/journal">journal </a>log: gender</li>
