--- a/website/vgs/fallout-1/index.html
+++ b/website/vgs/fallout-1/index.html
@@ -23,7 +23,7 @@
 		<div class="info"><b>genre/type: </b> rpg, action </div>
 		<h3>logs</h3>
 		<p><span class="date">11.apr.24</span> i played this game at around summer of 2020 after longing for some fallout for a while bc i had so much fun with <a href="/vgs/fallout-4/index.html">fallout 4</a> when it released. i boot up fallout, made my dumbass character. and oh boy. :D</p>
-		<p>i am dying left and right. i keep reloading my saves. i am in <b>shambles.</b> turns out this game? is VERY hard. and for my own sanity i could not continue with the same character i had bc i was literally not able to progress.</p>
+		<p>i am dying left and right. i keep reloading my saves. i am in <b>shambles.</b> turns out this game? is VERY hard. and for my own sanity i cannot continue with the same character i have bc i'm literally not gonna be able to make progress <small>without going crazy</small>.</p>
 		<p>i have 21 hrs in this and let me tell you that I DID have a lot of fun with it so far!!! it's so lively and refreshing. very very different (obviously) from any other game i've previously played.</p>
 		<p>i have plans to pick this game up again <b>someday</b> because well. i really love the world of these games and what they represent. i find it super interesting. but this time i will follow a guide to build my character stats bc i do not plan to suffer that much this time.</p>
 		<h4>screenshots</h4>
