--- a/website/projects/learning-js/index.html
+++ b/website/projects/learning-js/index.html
@@ -25,65 +25,14 @@
 <body>
 	<h1>i'm learning javascript</h1>
 	<main>
-	<p>i'm taking notes as i go through tutorials and read info <img src="/!g/pix/emoteoneourple.gif"> my <a href="practice.html">practice page</a> where i put what i've learned into practice.</p>
-		<nav><img src="/!g/pix/starblue.gif" alt=""> navigation: <a href="#smarter">a smarter way to learn JS</a>, <a href="#freecodecamp-1">freecodecamp exercise 1</a></nav>
-		<hr>
-		<h2>a smarter way to learn javascript</h2>
-		<p>my journey of using an e-book called <i>a smarter way of learning JS</i> to learn... (drumroll) javascript.</p>
-		<p>here's a link to the <a href="https://github.com/atifjamal360/Books/blob/master/A-Smarter-Way-to-Learn-JavaScript-The-new-approach-that-uses-technology-to-cut-your-effort-in-half.pdf" target="_blank">pdf</a> that i am using!</p>
-		<h3>chapter 1</h3>
-		<p>okay so i am learning stuff for alerts it's like this:</p>
-		<code>alert("this is an alert!");</code>
+		<p>i'm taking notes as i go through tutorials and read info <img src="/!g/pix/emoteoneourple.gif"></p>
 
-		<h3>chapter 2: declaring variables</h3>
-		<p>06.mar.24</p>
-		<p>i learned about declaring variables aka <code>var</code> and assigning it a string!</p>
-		<p>example: <code>var cat = "black with white socks"</code></p>
-		<p>and if i wanna do another string to the same <code>var</code> i can go <code>cat = "orange and white"</code></p>
-		<p>i can also use <code>let</code> for this</p>
+		<nav>navigation:
+			<br><img src="/!g/pix/starblue.gif" alt=""> <a href="smarter-way-js.html">a smarter way to learn JS</a>
+			<br><img src="/!g/pix/starblue.gif" alt=""> <a href="freecodecamp-1.html">freecodecamp exercise 1</a> - learn basic JS by building a RPG
+			<br><img src="/!g/pix/starblue.gif" alt=""> <a href="practice.html">practice page</a> where i put what i've learned into practice.
+		</nav>
 
-		<h3>chapter 3: numbers</h3>
-		<p>07.mar.24</p>
-		<p>a number is not enclosed in quotes! if it is, JS will read it as a <i>string</i></p>
-		<p>example: <code>var number = 50;</code></p>
-		<p>you can do math with this shit. example: <br> <code> var cookiesIveEaten = 5; <br> var totalCookiesIveEaten = cookiesIveEaten + 2;</code></p>
-		<p>the result of this will be this: <span id="cookies">
-				<script src="chapter3.js"></script>
-			</span></p>
-		<textarea>var cookiesIveEaten = 5;
-var totalCookiesIveEaten = cookiesIveEaten + 2;
-document.getElementById("cookies").innerHTML = totalCookiesIveEaten;
-			</textarea>
-
-		<h3>chapter 4: variable naming rules</h3>
-		<ul>
-			<li>only $, _</li>
-			<li>variable <u>cannot</u> start with a number</li>
-		</ul>
-
-		<h3>chapter 5: math expressions: familiar operators</h3>
-		<p>i can do math with javascript with these <code>- + * /</code></p>
-		<p class="revisit">i am not sure what a <i>modulus</i> (this thing <code>%</code>) exactly does tbh... will search more on this later</p>
-
-		<h3>chapter 6: math expressions: unfamiliar operators</h3>
-		<p><i>31.mar.24</i></p>
-		<p>learning about <code>x++</code> and <code>x--</code></p>
-		<p>good lord this one was a bit confusing....</p>
-		<p>okay so <code>num++;</code> is a short way of writing <code>num = num + 1;</code></p>
-		<p>but then when used in this example it confuses me so much... bc to me this makes no sense <img src="/!g/pix/emote1crying.gif" alt=""></p>
-		<img src="!g/240201.jpg" width="90%" alt="screenshot from the ebook">
-		<p>i just dont get how <i>"the 2nd statement boots its value to 2."</i> and yet <code>newnum</code> gets the original value of 1. that's what i'm having trouble wrapping my head around...</p>
-		<p>maybe i'll get it in the long run LOL.</p>
-
-		<h3>chapter 7: math expressions: eliminating ambiguity</h3>
-		<hr>
-		<h2>freecampcode : JS Algorithms and Data Structures</h2>
-		<h3>learn basic JS by building a RPG</h3>
-		<p>i'm doing a <a href="https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures-v8/" target="_blank">freecampcode</a> tutorial project as i read this ebook to put the stuff i'm reading into practice! i'll be putting some notes here that as well.</p>
-		<p>array: <code>let order = ["first", "second", "third"];</code></p>
-		<p>ids and classes go in quotes "" ... took me a minute or 2 trying to figure this out in the excersise LOL</p>
-		<p>you can also declare variables with <code>let</code>, use <code>const</code> for variables that don't need to be reassigned</p>
-		<p>you can change text inside an element with <code>innerText</code></p>
 	</main>
 
 	<footer>
