--- a/website/projects/learning-js/practice.html
+++ b/website/projects/learning-js/practice.html
@@ -45,7 +45,7 @@
 		<br>
 		....... ᓚᘏᗢ .......
 		<br>
-		<a href="/projects/learning-js/index.html">learning JS</a> / <a href="/home">home</a> / <a href="#">top</a>
+		<a href="/projects/learning-js/index.html">learning JS</a> / <a href="/projects/index.html">projects</a> / <a href="/home">home</a> / <a href="#">top</a>
 	</footer>
 	<script src="practice.js"></script>
 </body>
