--- a/website/vgs/fallout-1/index.html
+++ b/website/vgs/fallout-1/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>fallout</title>
 	<link rel="icon" type="image/x-icon" href="/vgs/favicon.gif">
 	<link href="/vgs/body.css" rel="stylesheet" type="text/css" media="all">
