--- a/website/vgs/fallout-new-vegas/index.html
+++ b/website/vgs/fallout-new-vegas/index.html
@@ -24,7 +24,7 @@
 		<h3>logs</h3>
 		<p><span class="date">11.apr.24</span> first played around the same time as <a href="/vgs/fallout-1/index.html">fallout</a> aka summer 2020 and probably once again in summer of 2021. i think i am halfway through the game but imma be real. i have 30 hrs in on this game. i kinda don't remember a lot of what's happening when i stopped playing it KFDLDFKFD. so when i pick it up again whenever, i will probably gonna have to do some light reading.</p>
 		<p>i'm pretty sure i had my fun in the 30 hrs that i played. i do remember the songs from the radio being a bit samey........... i felt like there were not that many songs in there. at least from my memory.</p>
-		<p>this is my 2nd 3D fallout i've ever played after <a href="/vgs/fallout-4/index.html">fallout 4</a>. gun play is def a bit jankier. but like i can't really bitch about that when it does INDEED have a WAYYY better dialogue (+dialogue system) than FO4. the gay ppl were right. very charming and funny game as well. will probably pick it up again after finished FO1. someday. on god 🙏</p>
+		<p>this is my 2nd 3D fallout i've ever played after <a href="/vgs/fallout-4/index.html">fallout 4</a>. gun play is def a bit jankier. but like i can't really bitch about that when it does INDEED have a WAYYY better dialogue (+dialogue system) than FO4. the gay ppl were right. very charming and funny game as well. will probably pick it up again after finishing FO1. someday. on god 🙏</p>
 
 		<h4>screenshots</h4>
 		<center>
