--- a/website/vgs/index.html
+++ b/website/vgs/index.html
@@ -69,7 +69,8 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 				</div>
 			</center>
 		</div>
-		<!-- 	template for vgs box 
+		<!-- 	template
+		
 	<div class="filterDiv">
 		<a title="game" href="/index.html" target="iframe_a"><img src="jpg" class="vgimg" tabindex="0"></a></div>
 -->
@@ -118,13 +119,13 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv finished rpg single">
 			<a title="dragon age inquisition" href="dai/index.html" target="iframe_a"><img src="dragonageinquisition.jpg" class="vgimg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv finished currently fav sim single">
+		<div class="filterDiv finished currently sim single">
 			<a title="fashion dreamer" href="fashion-dreamer/index.html" target="iframe_a"><img src="fashion-dreamer.jpg" class="vgimg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv fav action finished single">
 			<a title="fallout 4" href="fallout-4/index.html" target="iframe_a"><img src="fallout-4.jpg" class="vgimg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv fav action multi">
+		<div class="filterDiv action multi">
 			<a title="fortnite" href="fortnite/index.html" target="iframe_a"><img src="fortnite.jpg" class="vgimg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv fav finished action single">
@@ -166,7 +167,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv fav finished action adv single">
 			<a title="solar ash" href="solar-ash/index.html" target="iframe_a"><img src="solarash.jpg" class="vgimg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv fav finished sim single">
+		<div class="filterDiv finished sim single">
 			<a title="sticky business" href="sticky-business/index.html" target="iframe_a"><img src="sticky-business.png" class="vgimg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv cat fav finished single adv">
@@ -181,7 +182,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv finished horror single">
 			<a title="" href="2wip/index.html" target="iframe_a">milk outside a bag of milk outside a bag of milk</a>
 		</div>
-		<div class="filterDiv notdone horror single">
+		<div class="filterDiv toplay horror single">
 			<a title="" href="2wip/index.html" target="iframe_a">fatum betula</a>
 		</div>
 		<div class="filterDiv notdone fav single">
@@ -198,9 +199,6 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		</div>
 		<div class="filterDiv finished horror single">
 			<a title="" href="2wip/index.html" target="iframe_a">little nightmares</a>
-		</div>
-		<div class="filterDiv toplay single">
-			<a title="" href="2wip/index.html" target="iframe_a">pikuniku</a>
 		</div>
 		<div class="filterDiv fav finished horror card single">
 			<a title="" href="2wip/index.html" target="iframe_a">inscryption</a>
@@ -229,7 +227,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv finished single horror psychological">
 			<a title="" href="2wip/index.html" target="iframe_a">milk inside a bag of milk inside a bag of milk</a>
 		</div>
-		<div class="filterDiv fav finished single platform roguelike">
+		<div class="filterDiv finished single platform">
 			<a title="" href="2wip/index.html" target="iframe_a">dead cells</a>
 		</div>
 		<div class="filterDiv finished single sim adventure">
