--- a/website/vgs/index.html
+++ b/website/vgs/index.html
@@ -75,7 +75,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<a title="game" href="/index.html" target="iframe_a"><img src="jpg" class="vgimg" tabindex="0"></a></div>
 -->
 		<div class="filterDiv finished adv single">
-			<a title="abzu" href="abzu/index.html" target="iframe_a"><img src="abzu.jpg" class="vgimg" tabindex="0"></a>
+			<a title="abzu" href="abzu/index.html" target="iframe_a"><img src="abzu/cover.jpg" class="vgimg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished sim">
 			<a title="animal crossing new horizons" href="acnh/index.html" target="iframe_a"><img src="acnh.jpg" class="vgimg" tabindex="0"></a>
