--- a/website/vgs/fallout-1/index.html
+++ b/website/vgs/fallout-1/index.html
@@ -22,16 +22,31 @@
 		<div class="info"><b>release date: </b> october 10, 1997</div>
 		<div class="info"><b>developer: </b> interplay entertainment</div>
 		<div class="info"><b>genre/type: </b> rpg, action </div>
+
 		<h3>logs</h3>
 		<p><span class="date">11.apr.24</span> i played this game at around summer of 2020 after longing for some fallout for a while bc i had so much fun with <a href="/vgs/fallout-4/index.html">fallout 4</a> when it released. i boot up fallout, made my dumbass character. and oh boy. :D</p>
 		<p>i am dying left and right. i keep reloading my saves. i am in <b>shambles.</b> turns out this game? is VERY hard. and for my own sanity i cannot continue with the same character i have bc i'm literally not gonna be able to make progress <small>without going crazy</small>.</p>
 		<p>i have 21 hrs in this and let me tell you that I DID have a lot of fun with it so far!!! it's so lively and refreshing. very very different (obviously) from any other game i've previously played.</p>
 		<p>i have plans to pick this game up again <b>someday</b> because well. i really love the world of these games and what they represent. i find it super interesting. but this time i will follow a guide to build my character stats bc i do not plan to suffer that much this time.</p>
+
+		<hr>
+
+		<p><span class="date">13.apr.24</span> I AM BACK ON MY BULLSHIT. i added some guides and other links that i've found that have been helping me with getting back into the game. i follow these guides just for their recommended stats and character builds since i want to experience the story and all of that myself! i also downloaded a character editor which is a program that let's you edit out your stats and all of that. i don't want to be a walking death machine so the only things i've tweaked so far were my Action Points to 10 and my carry weight to a lil bit more.</p>
+
+		<hr>
+
+		<h4>ref &amp; links</h4>
+		<li><a href="https://cdn.akamai.steamstatic.com/steam/apps/38400/manuals/Fallout_manual_English.pdf?t=1572025441" target="_blank">official fallout manual</a></li>
+		<li><a href="https://lemmings19.github.io/fallout-1-walkthrough/" target="_blank">the ultimate fallout guide</a></li>
+		<li><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=631275749" target="_blank">mastering fallout 1 guide</a></li>
+		<li><a href="https://www.nma-fallout.com/resources/falche-fallout-1-editor.15/" target="_blank">fallout character editor</a></li>
+		<details>
+			<summary>hotkeys from official manual <small>i forget</small></summary><img src="manual-keys.PNG" width="100%">
+		</details>
 		<h4>screenshots</h4>
 		<center>
 			<img src="noodles.jpeg" width="90%" alt="screenshot of the game that reads you have no idea what instant spaghetti means. it weighs 1 pound.">
 		</center>
-
 
 	</div>
 	<footer><a href="/home">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a></footer>
