gaming log updated
added a bunch of games!

--- a/website/vgs/index.html
+++ b/website/vgs/index.html
@@ -95,11 +95,17 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv adv action notdone horror single">
 			<a title="bloodborne" href="bloodborne/index.html" target="iframe_a"><img src="bloodborne.jpg" class="vgimg" tabindex="0"></a>
 		</div>
+		<div class="filterDiv">
+			<a title="breath of the wild" href="botw/index.html" target="iframe_a"><img src="botw/cover.jpg" class="vgimg" tabindex="0" alt="botw"></a>
+		</div>
 		<div class="filterDiv fav finished adv platformer single">
 			<a title="bound" href="bound/index.html" target="iframe_a"><img src="bound.jpg" class="vgimg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv fav finished adv single">
 			<a title="bugsnax" href="bugsnax/index.html" target="iframe_a"><img src="bugsnax.jpg" class="vgimg" tabindex="0"></a>
+		</div>
+		<div class="filterDiv cat single rpg adventure">
+			<a title="cattails" href="cattails/index.html" target="iframe_a"><img src="cattails/cover.jpg" class="vgimg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv fav finished platformer single">
 			<a title="celeste" href="celeste/index.html" target="iframe_a"><img src="celeste.jpg" class="vgimg" tabindex="0"></a>
@@ -125,11 +131,20 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv fav action finished single">
 			<a title="fallout 4" href="fallout-4/index.html" target="iframe_a"><img src="fallout-4.jpg" class="vgimg" tabindex="0"></a>
 		</div>
+		<div class="filterDiv horror adventure">
+			<a title="fatum betula" href="fatum-betula/index.html" target="iframe_a"><img src="fatum-betula/cover.jpg" class="vgimg" tabindex="0" alt="fatum betula"></a>
+		</div>
 		<div class="filterDiv action multi">
 			<a title="fortnite" href="fortnite/index.html" target="iframe_a"><img src="fortnite.jpg" class="vgimg" tabindex="0"></a>
 		</div>
+		<div class="filterDiv fav finished single adventure plat">
+			<a title="gris" href="gris/index.html" target="iframe_a"><img src="gris/cover.jpg" class="vgimg" tabindex="0" alt="gris"></a>
+		</div>
 		<div class="filterDiv fav finished action single">
 			<a title="hyper light drifer" href="hld/index.html" target="iframe_a"><img src="hyperlightdrifter.jpg" class="vgimg" tabindex="0"></a>
+		</div>
+		<div class="filterDiv fav finished single adventure plat action">
+			<a title="hollow knight" href="hollow-knight/index.html" target="iframe_a"><img src="hollow-knight/cover.jpg" class="vgimg" tabindex="0" alt="hollow knight"></a>
 		</div>
 		<div class="filterDiv fav finished vn single">
 			<a title="if found..." href="if-found/index.html" target="iframe_a"><img src="if-found.jpg" class="vgimg" tabindex="0"></a>
@@ -142,6 +157,9 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		</div>
 		<div class="filterDiv cat fav adv finished single">
 			<a title="journey" href="journey/index.html" target="iframe_a"><img src="journey.jpg" class="vgimg" tabindex="0"></a>
+		</div>
+		<div class="filterDiv finished vn single horror">
+			<a title="milk inside a bag of milk inside a bag of milk" href="milk-inside/index.html" target="iframe_a"><img src="milk-inside/cover.jpg" class="vgimg" tabindex="0" alt="milk inside a bag of milk inside a bag of milk"></a>
 		</div>
 		<div class="filterDiv fav notdone multi single">
 			<a title="minecraft" href="minecraft/index.html" target="iframe_a"><img src="minecraft.jpg" class="vgimg" tabindex="0"></a>
@@ -164,11 +182,17 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv rhythm vn">
 			<a title="project sekai" href="prsk/index.html" target="iframe_a"><img src="prsk.jpg" class="vgimg" tabindex="0"></a>
 		</div>
+		<div class="filterDiv finished horror adventure single">
+			<a title="rental" href="rental/index.html" target="iframe_a"><img src="rental/cover.jpg" class="vgimg" tabindex="0" alt="rental"></a>
+		</div>
 		<div class="filterDiv fav finished action adv single">
 			<a title="solar ash" href="solar-ash/index.html" target="iframe_a"><img src="solarash.jpg" class="vgimg" tabindex="0"></a>
 		</div>
+		<div class="filterDiv multi shooter notdone">
+			<a title="splatoon 2" href="splatoon-2/index.html" target="iframe_a"><img src="splatoon-2/cover.jpg" class="vgimg" tabindex="0" alt="splatoon 2"></a>
+		</div>
 		<div class="filterDiv finished sim single">
-			<a title="sticky business" href="sticky-business/index.html" target="iframe_a"><img src="sticky-business.png" class="vgimg" tabindex="0"></a>
+			<a title="sticky business" href="sticky-business/index.html" target="iframe_a"><img src="sticky-business/cover.png" class="vgimg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv cat fav finished single adv">
 			<a title="stray" href="stray/index.html" target="iframe_a"><img src="stray.jpg" class="vgimg" tabindex="0"></a>
@@ -176,8 +200,11 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv finished single puzzle">
 			<a title="unpacking" href="unpacking/index.html" target="iframe_a"><img src="unpacking.jpg" class="vgimg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv finished action shootersingle">
-			<a title="watch dogs 2" href="watch-dogs-2/index.html" target="iframe_a"><img src="watch-dogs2.jpg" class="vgimg" tabindex="0"></a>
+		<div class="filterDiv finished action shooter single">
+			<a title="watch dogs 2" href="watch-dogs-2/index.html" target="iframe_a"><img src="watch-dogs-2/cover.jpg" class="vgimg" tabindex="0"></a>
+		</div>
+		<div class="filterDiv vn finished">
+			<a title="we know the devil" href="we-know-the-devil/index.html" target="iframe_a"><img src="we-know-the-devil/cover.png" class="vgimg" tabindex="0" alt="we know the devil"></a>
 		</div>
 		<div class="filterDiv finished horror single">
 			<a title="" href="2wip/index.html" target="iframe_a">milk outside a bag of milk outside a bag of milk</a>
@@ -193,12 +220,6 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		</div>
 		<div class="filterDiv notdone action single">
 			<a title="" href="2wip/index.html" target="iframe_a">yakuza 0</a>
-		</div>
-		<div class="filterDiv fav finished single adventure plat action">
-			<a title="" href="2wip/index.html" target="iframe_a">hollow knight</a>
-		</div>
-		<div class="filterDiv finished horror single">
-			<a title="" href="2wip/index.html" target="iframe_a">little nightmares</a>
 		</div>
 		<div class="filterDiv fav finished horror card single">
 			<a title="" href="2wip/index.html" target="iframe_a">inscryption</a>
