--- a/website/vgs/info.html
+++ b/website/vgs/info.html
@@ -44,14 +44,16 @@
 
 <body>
 	<div id="iframepc">
-		<p>welcome to <span class="gaminglog">doqmeat's gaming log!</span> these are either video games i've enjoyed, currently playing, or want to play! most of the time i'll write my thoughts on them, my progress, share screenshots i've taken, and anything else! <b>currently a MASSIVE work in progress!</b> spoilers will be <span class="spoiler">hidden!</span></p>
+		<p>welcome to <span class="gaminglog">doqmeat's gaming log!</span> these are either video games i've enjoyed, currently playing, or want to play! most of the time i'll write my thoughts on them, my progress, share screenshots i've taken, and anything else! spoilers will be <span class="spoiler">hidden!</span></p>
 		<p>click on a <mark>vg thumbnail and content will appear here!</mark> <span class="hide"> <img src="/!g/pix/caution1.gif"> <a href="/vgs" target="_parent">click here to go to index page</a> if you're out of frame!</span>
-		<p>they are in alphabetical order and can be sorted by the tags seen above them!</p>
+		<p><small>they are in alphabetical order and can be sorted by the tags seen above them!</small></p>
+
 		<img src="/!g/deco/sunflowers2.gif">
 
 		<h3>change log</h3>
 
 		<div id="log">
+		<li>14.apr.24 - added: <a href="botw/index.html">breath of the wild</a>, <a href="cattails/index.html">cattails</a>, <a href="gris/index.html">gris</a>, <a href="hollow-knight/index.html">hollow knight</a></li>
 			<li>12.apr.24 - added: <a href="fallout-1/index.html">fallout</a>, <a href="fallout-new-vegas/index.html">fallout new vegas</a> <small>i just finished watching the fallout show, can you tell?</small>, <a href="cloud-gardens/index.html">cloud gardens</a></li>
 			<li>21.mar.24 - added: <a href="paranormasight/index.html">paranormasight</a> / log: <a href="prsk/index.html">project sekai</a></li>
 			<li>11.dec.23 - log: <a href="fortnite/index.html#1">fortnite</a>, <a href="bloodborne/index.html#7">bloodborne</a></li>
@@ -66,6 +68,11 @@
 			<li>23.jul.23 - updated <a href="/vgs/bloodborne">bloodborne</a></li>
 			<li>14.jul.23 - added <a href="/vgs/prsk">project sekai</a></li>
 		</div>
+
+		<h3>lore</h3>
+		<p>i pretty much grew up playing video games :3</p>
+		<p><b>consoles i've had:</b> <s title="i don't remember what happened but it broke in the middle. maybe i let it fell...">DS lite</s>, <s title="the ring of death or whatever">xbox 360</s>, <s title="gave it to my cousin when i got a 3DS">DSi</s>, <s title="i think we sold this...">wii</s>, 3DS, wii u, <s title="i think i just need to buy a wired controller so i can be able to play it again LOL">PS4</s>, switch lite</p>
+		<p>honorable mention to my poor non-gamer laptops i've had to run games that weren't meant to be played in them.</p>
 
 		<h3>credit</h3>
 		<p>heading font is yoster</p>
