--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -185,6 +185,7 @@
 			<a title="popisbubble" href="https://popisbubbles.neocities.org"><img src="!g/popisbubbles.gif" alt="popisbubbles"></a>
 			<a title="caitsith" href="https://caitsith.neocities.org" target="_blank"><img src="!g/caitsith.gif" alt="caitsith"></a>
 			<a title="ribo.zone" href="https://ribo.zone/" target="_blank"><img src="!g/ribose.gif" alt="ribo.zone"></a>
+			<a title="kaftofi" href="https://sea-of-colors.neocities.org/" target="_blank"><img src="!g/sea-of-colors.gif" alt="sea of colors"></a>
 
 		</div>
 
