--- a/website/vgs/info.html
+++ b/website/vgs/info.html
@@ -53,7 +53,7 @@
 		<h3>change log</h3>
 
 		<div id="log">
-		<li>14.apr.24 - added: <a href="botw/index.html">breath of the wild</a>, <a href="cattails/index.html">cattails</a>, <a href="gris/index.html">gris</a>, <a href="hollow-knight/index.html">hollow knight</a></li>
+			<li>14.apr.24 - added: <a href="botw/index.html">breath of the wild</a>, <a href="cattails/index.html">cattails</a>, <a href="gris/index.html">gris</a>, <a href="hollow-knight/index.html">hollow knight</a>, <a href="milk-inside/index.html">milk inside a bag of milk</a>, <a href="rental/index.html">rental</a>, <a href="splatoon-2/index.html">splatoon 2</a></li>
 			<li>12.apr.24 - added: <a href="fallout-1/index.html">fallout</a>, <a href="fallout-new-vegas/index.html">fallout new vegas</a> <small>i just finished watching the fallout show, can you tell?</small>, <a href="cloud-gardens/index.html">cloud gardens</a></li>
 			<li>21.mar.24 - added: <a href="paranormasight/index.html">paranormasight</a> / log: <a href="prsk/index.html">project sekai</a></li>
 			<li>11.dec.23 - log: <a href="fortnite/index.html#1">fortnite</a>, <a href="bloodborne/index.html#7">bloodborne</a></li>
