--- a/website/index.html
+++ b/website/index.html
@@ -106,6 +106,11 @@
 
 	<div id="webrings">
 		<h3>webrings</h3>
+		<!--		bisexualism-->
+		<div id="bisexualism">
+			<script type="text/javascript" src="https://emeowly.github.io/bi/onionring-variables.js" defer></script>
+			<script type="text/javascript" src="https://emeowly.github.io/bi/onionring-img-widget.js" defer></script>
+		</div>
 
 		<!--		eggring -->
 		<div style="border:2px solid #ffce10; width:80%;background:white;margin:auto;margin-bottom:10px;margin-top:10px;border-radius:10px;font-size: 13px;" id="eggring">
