--- a/website/notebook/sitely/graphics.html
+++ b/website/notebook/sitely/graphics.html
@@ -203,7 +203,6 @@
 		<img src="/!g/pix/musicnotes2.gif">
 		<img src="/!g/pix/paper.gif">
 		<img src="/!g/pix/rainbow.gif">
-		<img src="/!g/pix/doggy.gif">
 		<img src="/!g/pix/ghost.gif">
 		<img src="/!g/pix/plant2.gif">
 		<img src="/!g/pix/heart-paper.gif">
@@ -233,7 +232,6 @@
 		<img src="/!g/pix/musicnote.gif">
 		<img src="/!g/pix/beat.gif">
 		<img src="/!g/pix/beat-stop.png">
-		<img src="/!g/pix/nyancat.gif">
 		<img src="/!g/pix/apple.gif">
 		<img src="/!g/pix/cherry.gif">
 		<img src="/!g/pix/clover.gif">
@@ -279,7 +277,6 @@
 		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/pix/sorahanamuu1.gif"></a>
 		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/pix/sorahana-hw04.gif"></a>
 		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/pix/sorahana-hw01.gif"></a>
-		<img src="/!g/pix/cam-shoot.gif">
 		<img src="/!g/pix/building.gif">
 		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/pix/gaikotsu2.gif"></a>
 		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/pix/kabocha2-2b.gif"></a>
@@ -327,6 +324,10 @@
 		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/pix/sorahana-butterfly-yellowmm.gif"></a>
 		<a title="sorahana" href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/pix/sorahana-butterflyanime.gif"></a>
 		<img src="/!g/deco/flower5.gif">
+		<img src="/!g/pix/doggy.gif">
+		<img src="/!g/pix/nyancat.gif">
+		<img src="/!g/pix/cam-shoot.gif">
+		<img src="/!g/pix/sorry.gif">
 		<img src="/!g/pix/buttermeadow.gif">
 		<img src="/!g/pix/butter2.gif">
 		<img src="/!g/deco/euyqXwf.gif">
