updated webrings and currently

--- a/website/index.html
+++ b/website/index.html
@@ -106,6 +106,8 @@
 
 	<div id="webrings">
 		<h3>webrings</h3>
+		<!--		catfolk-->
+		<script src="https://snewberry.neocities.org/catfolk/webstring.js"></script>
 		<!--		bisexualism-->
 		<div id="bisexualism">
 			<script type="text/javascript" src="https://emeowly.github.io/bi/onionring-variables.js" defer></script>
