--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -19,7 +19,6 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 	<link href="body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="v3-index.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
-	<script src="https://melonking.net/scripts/frame-link.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
@@ -35,9 +34,6 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 			<h1>des' journal</h1>
 			<img src="/!g/deco/diary.gif" align="left">
 			<p>on this little notepad i write about my life, site stuff, and any other misc things.</p>
-			<small class="sticky">all sticky notes are draggable!</small>
-			<p><a href="credit.html" target="iframe_a">credit page</a></p>
-			<img class="hide" src="/!g/deco/pencil1.gif" style="max-width:100%">
 			<details open>
 				<summary>2024</summary>
 				<a href="2024/04.html" target="iframe_a">april</a>
@@ -57,6 +53,11 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 				<a href="2023/05.html" target="iframe_a">may</a>
 				<a href="2023/04.html" target="iframe_a">april</a>
 			</details>
+
+			<img class="hide" src="/!g/deco/pencil1.gif" style="max-width:100%">
+
+			<p>links: <a title="will open on iframe, hosted on FC2" href="https://doqmeat.blog.fc2.com" target="iframe_a">microblog</a> / <a title="food journal" href="https://moku.blog/user/doqmeat" target="_blank"> moku.blog</a> / <a href="credit.html" target="iframe_a">credit</a></p>
+
 
 		</nav>
 
@@ -124,18 +125,8 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 
 	<aside id="memo4" class="memo draggable">
 		<div class="innermemo">
-			<h2>microblogs</h2>
-			<h3><img src="/!g/pix/cam-shoot.gif" alt="emoticon"> piclog</h3>
+			<h2><img src="/!g/pix/cam-shoot.gif" alt="emoticon"> piclog</h2>
 			<a title="piclog profile will open on iframe!" href="https://piclog.blue/profile.php?id=51" target="iframe_a"><img src="https://piclog.blue/latest.php?id=51" width="100%" style="border-radius: 10px;" alt="piclog"></a>
-
-			<h3><img src="/!g/pix/eat.gif" width="110" alt=""> <a href="https://moku.blog/user/doqmeat" target="_blank"> moku.blog</a></h3>
-			<p>i am a big foodie and so i found this site where you log in your food and you can share recipes and pics! hope it gets a little feed in the future i can put here!</p>
-
-			<h3><img src="/!g/pix/2ofem.gif" width="70" alt=""> <a title="will pop up in the iframe :)" href="https://doqmeat.blog.fc2.com" target="iframe_a">doqmeat.blog.fc2</a></h3>
-			<p>literally ramblings</p>
-
-			<h3><img src="/!g/pix/computer.gif"> <a href="https://status.cafe/users/doqmeat" target="_blank">status.cafe</a></h3>
-			<p>mostly for quick updates so they can appear on my homepage :3</p>
 		</div>
 	</aside>
 
