--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -199,7 +199,8 @@
 			<a href="https://vickee.neocities.org" target="_blank">vickee</a> /
 			<a title="one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/">2cherrish</a> /
 			<a href="https://yaebee.neocities.org/" target="_blank">yaebee</a> /
-			<a href="https://glassheart.neocities.org" target="_blank">glassheart</a>
+			<a href="https://glassheart.neocities.org" target="_blank">glassheart</a> /
+			<a href="https://cyclopamine.neocities.org/" target="_blank">cyclopamine</a>
 		</p>
 
 		<h3><img src="/!g/pix/icon_k_clover1.gif"> other cool sites</h3>
