--- a/website/vgs/fallout-1/index.html
+++ b/website/vgs/fallout-1/index.html
@@ -35,6 +35,13 @@
 
 		<hr>
 
+		<p><span class="date">17.apr.24</span> wow. so with the help of the character editor i've been able to focus on the story while also enjoying the combat! YAY! i managed to complete my main mission which was to get a water chip for my vault, <span class="spoiler">and now i gotta figure out where the mutants are coming from</span>. i've gotten a little bit farther from where i first left off like 3 years ago. i've been enjoying it so much! as someone who's been meaning to get into this game for a bit because of it's story but couldn't because of it's difficulty, i'm very happy i was able to find some help online on how i could play this in the least painful way possible. i'm very invested in the story which i'm going blind for the most part, except for <span class="spoiler">the master</span>. i forgot what is their issue (thank you brain!) but i am so excited to meet them after seeing how sick (both a good and bad way) the character design for him is.</p>
+		<p>i had dogmeat throughout the game til a bit earlier. he died :( sorry dogmeat. i don't want to reload my save file. you will be missed.... besides my beloved dogmeat, i've only had ian as my companion. and well he is still my companion. hmm. i wonder where are the other companions. i read that companions were added late to this game. so i'm guessing there aren't that many in game to begin with.</p>
+		<p>also, i randomly opened my pipboy and saw that it was valentine's in game and it showed a little message. aw.</p>
+		<img src="happy-valentines.jpg" width="100%" alt="happy valentine's day">
+		<p>i've also recently discovered that fallout's creator (tim cain) has a <a href="https://www.youtube.com/@CainOnGames" target="_blank">youtube channel</a> and he honestly gives out cool grandpa vibes. he's been doing short videos about being a game dev (for the most part) and of course, he also has done some videos talking about the development for fallout. i've been watching his videos almost on a daily basis and i honestly just love hearing him talk about stuff. he seems like a very chill dude.</p>
+		<hr>
+
 		<h4>ref &amp; links</h4>
 		<li><a href="https://cdn.akamai.steamstatic.com/steam/apps/38400/manuals/Fallout_manual_English.pdf?t=1572025441" target="_blank">official fallout manual</a></li>
 		<li><a href="https://lemmings19.github.io/fallout-1-walkthrough/" target="_blank">the ultimate fallout guide</a></li>
